# neural-needledrop

./: .gitignore  README.md  compose.yaml  compose.yml
.github/workflows/: deploy_api.yaml  deploy_database.yaml  deploy_pipeline.yaml  deploy_ui.yaml
api/: Dockerfile  README.md  api.py  pyproject.toml
api/deployment/: deploy_api.sh
api/notebooks/: 01. Setting Up GBQ Tables.ipynb  01. Writing Postgres Queries.ipynb  02. Creating a Neural Search Method.ipynb  03. Optimizing Embedding Indices.ipynb  04. Creating a Keyword Search Method.ipynb  05. Creating a Hybrid Search Method.ipynb
api/utils/: logging.py  openai.py  postgres.py  postgres_queries.py  search.py  settings.py
database/: Dockerfile  README.md  pyproject.toml  update_database.py
database/deployment/: database_cron  deploy_database.sh
database/notebooks/: 01. Initializing Postgres Tables.ipynb  02. Uploading Data to Postgres Tables.ipynb  03. Functionalizing the Database Update.ipynb
database/utils/: gbq.py  gcs.py  postgres.py  settings.py
pipeline/: Dockerfile  README.md  pyproject.toml  run_pipeline.py
pipeline/deployment/: deploy_pipeline.sh  pipeline_cron
pipeline/jobs/: download_audio.py  download_video_metadata.py  embed_transcriptions.py  enrich_video_metadata.py  initialize_cloud_resources.py  transcribe_audio.py
pipeline/notebooks/: 01. Setting Up GBQ Tables.ipynb  02. Prototyping Data Pipeline.ipynb  03. Finalizing Pipeline.ipynb  04. Uploading Previously Scraped Data.ipynb
pipeline/utils/: enriching_data.py  gbq.py  gcs.py  logging.py  miscellaneous.py  openai.py  pipeline.py  settings.py  youtube.py
ui/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  vite.config.js
ui/deployment/: deploy_ui.sh
ui/src/: App.css  App.jsx  api.jsx  stores.jsx
ui/src/components/: AdvancedSearchOptions.jsx  SearchResult.jsx
ui/src/modals/: DetailsModal.jsx
ui/src/pages/: ResultsPage.jsx  SearchPage.jsx
