[tool.poetry]
name = "neural-needledrop-database"
version = "0.1.0"
description = "The local database for the Neural Needledrop app. Written in Python"
authors = ["Trevor Hubbard <trevormhubbard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.25"
psycopg-binary = "^3.1.17"
google-cloud-bigquery = "^3.16.0"
pandas = "^2.2.0"
requests = "^2.31.0"
pandas-gbq = "^0.20.0"
google-cloud-logging = "^3.9.0"
google-cloud-storage = "^2.14.0"
psycopg2 = "^2.9.9"
pgvector = "^0.2.4"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
